force-app/main/default/objects/Union__c/Union__c.object-meta.xml
<CustomObject>
    <label>Union</label>
    <nameField>
        <label>Union</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>