force-app/main/default/objects/Union__c/fields/Description_Long__c.field-meta.xml
<CustomField>
    <fullName>Description_Long__c</fullName>
    <description>The Long Description(This field was created for NPL MA).</description>
    <label>Description Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>