force-app/main/default/objects/Union__c/fields/Description_Short__c.field-meta.xml
<CustomField>
    <fullName>Description_Short__c</fullName>
    <description>The shortDescription(This field was created for NPL MA).</description>
    <label>Description Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>