force-app/main/default/objects/Union__c/fields/UnionCode__c.field-meta.xml
<CustomField>
    <fullName>UnionCode__c</fullName>
    <description>The Unique Union code(This field was created for NPL MA).</description>
    <externalId>true</externalId>
    <label>Union Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>