force-app/main/default/objects/Union__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description_Short__c</columns>
    <columns>Description_Long__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>